--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "weather-app",
-  "homepage": "https://Bharat940.github.io/weather_app/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -8,14 +7,11 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.6",
     "country-state-city": "^3.2.1",
-    "gh-pages": "^6.3.0",
     "react": "^19.0.0",
     "react-country-state-city": "^1.1.11",
     "react-dom": "^19.0.0",
